--- a/.travis.yml
+++ b/.travis.yml
@@ -116,6 +116,9 @@ before_install:
     # Fetch Cray Tests
     - cd $TRAVIS_SRC
     - git clone --depth 10 https://github.com/openshmem-org/tests-cray.git tests-cray
+    # Fetch Mellanox Tests
+    - cd $TRAVIS_SRC
+    - git clone --depth 10 https://github.com/openshmem-org/tests-mellanox.git tests-mellanox
     ## Fetch ISx
     - cd $TRAVIS_SRC
     - git clone --depth 10 https://github.com/ParRes/ISx.git ISx
@@ -155,15 +158,15 @@ script:
     ###
     ### Build and check Portals
     ###
-    - cd $SOS_SRC
-    - mkdir portals4-build
-    - cd portals4-build
-    - export PATH=$TRAVIS_INSTALL/hydra/bin:$TRAVIS_INSTALL/portals4/bin:$BASE_PATH
-    - ../configure --with-portals4=$TRAVIS_INSTALL/portals4/ --prefix=$TRAVIS_INSTALL/sandia-shmem-portals4 $SOS_GLOBAL_BUILD_OPTS $SOS_BUILD_OPTS
-    - make $TRAVIS_PAR_MAKE
-    - make $TRAVIS_PAR_MAKE check TESTS=
-    #- make VERBOSE=1 TEST_RUNNER="mpiexec.hydra -np 2 timeout 10" check
-    - make install
+#    - cd $SOS_SRC
+#    - mkdir portals4-build
+#    - cd portals4-build
+ #   - export PATH=$TRAVIS_INSTALL/hydra/bin:$TRAVIS_INSTALL/portals4/bin:$BASE_PATH
+ #   - ../configure --with-portals4=$TRAVIS_INSTALL/portals4/ --prefix=$TRAVIS_INSTALL/sandia-shmem-portals4 $SOS_GLOBAL_BUILD_OPTS $SOS_BUILD_OPTS
+ #   - make $TRAVIS_PAR_MAKE
+ #   - make $TRAVIS_PAR_MAKE check TESTS=
+ #   #- make VERBOSE=1 TEST_RUNNER="mpiexec.hydra -np 2 timeout 10" check
+ #   - make install
     ###
     ### Build and check OFI
     ###
@@ -179,61 +182,61 @@ script:
     ###
     ### Run the UH test suite (Portals)
     ###
-    - export PATH=$TRAVIS_INSTALL/portals4/bin:$TRAVIS_INSTALL/sandia-shmem-portals4/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
-    - export OSHRUN_LAUNCHER="mpiexec.hydra"
-    - cd $TRAVIS_SRC/tests-uh
-    - make $TRAVIS_PAR_MAKE C_feature_tests
-    #- make C_feature_tests-run 2>&1 | tee uh-tests-c-feature-tests.log
-    # Check for failures in the C tests
-    #- if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-c-feature-tests.log; then false; else true; fi
-    - >
-      if [ -z "$SOS_DISABLE_FORTRAN" ]; then
-          make F_feature_tests;
-          if false && [ $? -eq 0 ]; then
-              make F_feature_tests-run 2>&1 | tee uh-tests-f-feature-tests.log;
-              # Check for failures in the Fortran tests
-              if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-f-feature-tests.log; then false; else true; fi;
-          fi;
-      fi
-    - >
-      if [ -z "$SOS_DISABLE_FORTRAN" ]; then
-          make F_error_tests;
-          if false && [ $? -eq 0 -a $SOS_ENABLE_ERROR_TESTS ]; then
-              make F_error_tests-run 2>&1 | tee uh-tests-f-error-tests.log;
-              # Check for failures in the Fortran tests
-              if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-f-error-tests.log; then false; else true; fi;
-          fi;
-      fi
-    - make clean
-    ###
-    ### Run the UH test suite (OFI)
-    ###
-    - export PATH=$TRAVIS_INSTALL/sandia-shmem-ofi/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
-    - export OSHRUN_LAUNCHER="mpiexec.hydra"
-    - cd $TRAVIS_SRC/tests-uh
-    - make $TRAVIS_PAR_MAKE C_feature_tests
-    - make C_feature_tests-run 2>&1 | tee uh-tests-c-feature-tests.log
-    # Check for failures in the C tests
-    - if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-c-feature-tests.log; then false; else true; fi
-    - >
-      if [ -z "$SOS_DISABLE_FORTRAN" ]; then
-          make F_feature_tests;
-          if [ $? -eq 0 ]; then
-              make F_feature_tests-run 2>&1 | tee uh-tests-f-feature-tests.log;
-              # Check for failures in the Fortran tests
-              if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-f-feature-tests.log; then false; else true; fi;
-          fi;
-      fi
-    - >
-      if [ -z "$SOS_DISABLE_FORTRAN" ]; then
-          make F_error_tests;
-          if [ $? -eq 0 -a $SOS_ENABLE_ERROR_TESTS ]; then
-              make F_error_tests-run 2>&1 | tee uh-tests-f-error-tests.log;
-              # Check for failures in the Fortran tests
-              if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-f-error-tests.log; then false; else true; fi;
-          fi;
-      fi
-    - make clean
+ #   - export PATH=$TRAVIS_INSTALL/portals4/bin:$TRAVIS_INSTALL/sandia-shmem-portals4/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
+ #   - export OSHRUN_LAUNCHER="mpiexec.hydra"
+ #   - cd $TRAVIS_SRC/tests-uh
+ #   - make $TRAVIS_PAR_MAKE C_feature_tests
+ #   #- make C_feature_tests-run 2>&1 | tee uh-tests-c-feature-tests.log
+ #   # Check for failures in the C tests
+ #   #- if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-c-feature-tests.log; then false; else true; fi
+ #   - >
+ #     if [ -z "$SOS_DISABLE_FORTRAN" ]; then
+ #         make F_feature_tests;
+ #         if false && [ $? -eq 0 ]; then
+ #             make F_feature_tests-run 2>&1 | tee uh-tests-f-feature-tests.log;
+ #             # Check for failures in the Fortran tests
+ #             if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-f-feature-tests.log; then false; else true; fi;
+ #         fi;
+ #     fi
+ #   - >
+ #     if [ -z "$SOS_DISABLE_FORTRAN" ]; then
+ #         make F_error_tests;
+ #         if false && [ $? -eq 0 -a $SOS_ENABLE_ERROR_TESTS ]; then
+ #             make F_error_tests-run 2>&1 | tee uh-tests-f-error-tests.log;
+ #             # Check for failures in the Fortran tests
+ #             if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-f-error-tests.log; then false; else true; fi;
+ #         fi;
+ #     fi
+ #   - make clean
+ #   ###
+ #   ### Run the UH test suite (OFI)
+ #   ###
+ #   - export PATH=$TRAVIS_INSTALL/sandia-shmem-ofi/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
+ #   - export OSHRUN_LAUNCHER="mpiexec.hydra"
+ #   - cd $TRAVIS_SRC/tests-uh
+ #   - make $TRAVIS_PAR_MAKE C_feature_tests
+ #   - make C_feature_tests-run 2>&1 | tee uh-tests-c-feature-tests.log
+ #   # Check for failures in the C tests
+ #   - if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-c-feature-tests.log; then false; else true; fi
+ #   - >
+ #     if [ -z "$SOS_DISABLE_FORTRAN" ]; then
+ #         make F_feature_tests;
+ #         if [ $? -eq 0 ]; then
+ #             make F_feature_tests-run 2>&1 | tee uh-tests-f-feature-tests.log;
+ #             # Check for failures in the Fortran tests
+ #             if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-f-feature-tests.log; then false; else true; fi;
+ #         fi;
+ #     fi
+ #   - >
+ #     if [ -z "$SOS_DISABLE_FORTRAN" ]; then
+ #         make F_error_tests;
+ #         if [ $? -eq 0 -a $SOS_ENABLE_ERROR_TESTS ]; then
+ #             make F_error_tests-run 2>&1 | tee uh-tests-f-error-tests.log;
+ #             # Check for failures in the Fortran tests
+ #             if grep "^(test_[0-9]\+) Running.*Failed$" uh-tests-f-error-tests.log; then false; else true; fi;
+ #         fi;
+ #     fi
+ #   - make clean
     ###
     ### Run the Cray test suite (OFI)
     ###
@@ -243,13 +246,25 @@ script:
     - $SOS_SRC/scripts/cray_tests.sh
 
     ###
+    ### Run the Mellanox test suite (OFI)
+    ###
+    - export PATH=$TRAVIS_INSTALL/sandia-shmem-ofi/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
+    - export MELLANOX_TESTS_DIR=$TRAVIS_SRC/tests-mellanox
+    - cd $MELLANOX_TESTS_DIR/verifier
+    - ./autogen.sh
+    - configure --prefix=$PWD/install
+    - make install
+    - oshrun -np 2 ./oshmem_test exec --task=data
+    - make clean
+
+    ###
     ### Run ISx (Portals)
     ###
-    - export PATH=$TRAVIS_INSTALL/portals4/bin:$TRAVIS_INSTALL/sandia-shmem-portals4/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
-    - export OSHRUN_LAUNCHER="mpiexec.hydra"
-    - cd $TRAVIS_SRC/ISx/SHMEM
-    - make CC=oshcc LDLIBS=-lm
-    - make clean
+ #   - export PATH=$TRAVIS_INSTALL/portals4/bin:$TRAVIS_INSTALL/sandia-shmem-portals4/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
+ #   - export OSHRUN_LAUNCHER="mpiexec.hydra"
+ #   - cd $TRAVIS_SRC/ISx/SHMEM
+ #   - make CC=oshcc LDLIBS=-lm
+ #   - make clean
     ###
     ### Run ISx (OFI)
     ###
@@ -264,22 +279,22 @@ script:
     ###
     ### Run PRK (Portals)
     ###
-    - export PATH=$TRAVIS_INSTALL/portals4/bin:$TRAVIS_INSTALL/sandia-shmem-portals4/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
-    - export OSHRUN_LAUNCHER="mpiexec.hydra"
-    - cd $TRAVIS_SRC/PRK
-    - make allshmem
-    - make clean
-    ###
-    ### Run PRK (OFI)
-    ###
-    - export PATH=$TRAVIS_INSTALL/sandia-shmem-ofi/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
-    - export OSHRUN_LAUNCHER="mpiexec.hydra"
-    - cd $TRAVIS_SRC/PRK
-    - make allshmem
-    - oshrun -np 4 ./SHMEM/Stencil/stencil 100 1000
-    - oshrun -np 4 ./SHMEM/Synch_p2p/p2p 10 1000 1000
-    - oshrun -np 4 ./SHMEM/Transpose/transpose 10 1000
-    - make clean
+ #   - export PATH=$TRAVIS_INSTALL/portals4/bin:$TRAVIS_INSTALL/sandia-shmem-portals4/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
+ #   - export OSHRUN_LAUNCHER="mpiexec.hydra"
+ #   - cd $TRAVIS_SRC/PRK
+ #   - make allshmem
+ #   - make clean
+ #   ###
+ #   ### Run PRK (OFI)
+ #   ###
+ #   - export PATH=$TRAVIS_INSTALL/sandia-shmem-ofi/bin:$TRAVIS_INSTALL/hydra/bin:$BASE_PATH
+ #   - export OSHRUN_LAUNCHER="mpiexec.hydra"
+ #   - cd $TRAVIS_SRC/PRK
+ #   - make allshmem
+ #   - oshrun -np 4 ./SHMEM/Stencil/stencil 100 1000
+ #   - oshrun -np 4 ./SHMEM/Synch_p2p/p2p 10 1000 1000
+ #   - oshrun -np 4 ./SHMEM/Transpose/transpose 10 1000
+ #   - make clean
 after_script:
     - >
       if [ "$CC" = "icc" ]; then
@@ -289,8 +304,9 @@ after_script:
 notifications:
   email:
     recipients:
-      - regrant@sandia.gov
-      - james.dinan@intel.com
-      - kayla.seager@intel.com
+      - isayah.reed@intel.com
+ #     - regrant@sandia.gov
+ #     - james.dinan@intel.com
+ #     - kayla.seager@intel.com
     on_success: [change]
     on_failure: [always] 
