--- a/.travis.yml
+++ b/.travis.yml
@@ -254,7 +254,7 @@ script:
     - export MELLANOX_TESTS_DIR=$TRAVIS_SRC/tests-mellanox
     - cd $MELLANOX_TESTS_DIR/verifier
     - ./autogen.sh
-    - ./configure --prefix=$PWD/install
+    - ./configure --prefix=$PWD/install CC=oshcc
     - make install
     - oshrun -np 2 $PWD/intall/bin/oshmem_test exec --task=data
     - make clean
