--- a/.travis.yml
+++ b/.travis.yml
@@ -255,7 +255,7 @@ script:
     - cd $MELLANOX_TESTS_DIR/verifier
     - ./autogen.sh
     - ./configure --prefix=$PWD/install CC=oshcc
-    - make install
+    - make oshmem_test
     - oshrun -np 2 $PWD/intall/bin/oshmem_test exec --task=data
     - make clean
 
