--- a/.travis.yml
+++ b/.travis.yml
@@ -258,6 +258,7 @@ script:
     - make clean
     - make install
     - make oshmem_test
+    - find ../ -name "*liboshmem_basic_tc3.a*"
     - oshrun -np 2 $PWD/intall/bin/oshmem_test exec --task=data
     - make clean
 
