--- a/.travis.yml
+++ b/.travis.yml
@@ -267,10 +267,10 @@ script:
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=misc
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=atomic
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=lock
-    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=analysis
-    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=basic
-    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=data
-    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=coll
+#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=analysis
+#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=basic
+#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=data
+#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=coll
 #    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=reduce
     - make clean
 
