--- a/.travis.yml
+++ b/.travis.yml
@@ -260,8 +260,8 @@ script:
     - make clean
     - make install
     - make oshmem_test
-    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=coll -o4
-    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=reduce -o4
+    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=coll
+#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=reduce -o4
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=sync
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=stride
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=nbi
@@ -269,7 +269,7 @@ script:
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=atomic
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=lock
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=analysis
-    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=basic
+#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=basic
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=data
       # --task=mix tests SOS with MPI 
 #    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=mix
