--- a/.travis.yml
+++ b/.travis.yml
@@ -261,18 +261,20 @@ script:
     - make install
     - make oshmem_test
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=coll
-#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=reduce -o4
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=sync
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=stride
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=nbi
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=misc
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=atomic
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=lock
-    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=analysis
-#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=basic
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=data
-      # --task=mix tests SOS with MPI 
-#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=mix
+    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=reduce
+      # this suite will fail until the shmem_malloc issues are resolved
+#    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=basic
+      # analysis test is not a functional test, and it consumes too much time
+    #- oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=analysis
+      # mix test is SOS with MPI, which requires an MPI lib 
+    #- oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=mix
     - make clean
 
     ###
