--- a/.travis.yml
+++ b/.travis.yml
@@ -267,6 +267,7 @@ script:
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=misc
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=atomic
     - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=lock
+    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=data
       # this suite will fail until the shmem_malloc issues are resolved
 #    - oshrun -np 4 $PWD/install/bin/oshmem_test exec --task=basic
       # analysis test is not a functional test, and it consumes too much time
